# flask_tryout

./: .gitignore  Dockerfile  README.md  app.py  config.py  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  security.py  test.py  uwsgi.ini
.github/workflows/: python-app.yml
app/: __init__.py  config.py  security.py
app/mod_auth/: models.py
app/models/: article.py  item.py  store.py  user.py
app/resources/: article.py  item.py  login.py  store.py  user.py
code/: app.py  create_tables.py  data.db  requirements.txt  security.py  user.py  uwsgi.ini
code/models/: item.py  user.py
code/resources/: item.py  user.py
config/: nginx.conf
deploy/: 00_configmap.yaml  01_storageClass.yaml  02_postgres_sts.yaml  03_api_deployment.yaml  04_frontend.yaml  ingres.yaml
env/: pip-selfcheck.json
models/: store.py  user.py
resources/: item.py  store.py  user.py
staticfiles/.well-known/pki-validation/: 5BAE3BD04C96D7F19875D69D79A7B585.txt
statics/: wellknown.txt
tests/: test_sample.py
