[tool.poetry]
name = "flask_tryout"
version = "0.1.0"
description = ""
authors = ["ninochang <nino.chang@swag.live>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask-jwt = "^0.3.2"
flask-restful = "^0.3.8"
flask-sqlalchemy = "^2.4.4"
itsdangerous = "^1.1.0"
sqlalchemy = "^1.3.22"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
